--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -155,7 +155,7 @@ div.titlecategory {
     float: left;
     width: calc(100% - 20px);
     padding-left: 20px;
-    background-color: gold;
+    background-color: #ec6e12;
     color: #fff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
